kubeflow/common/knative/upstream/knative-serving/overlays/gateways/patches/gateway-selectors.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: knative-serving/knative-local-gateway
  name: knative-local-gateway
  namespace: knative-serving
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|Gateway|knative-serving|knative-local-gateway'
spec:
  selector:
    app: cluster-local-gateway
    istio: cluster-local-gateway
---
apiVersion: v1
kind: Service
metadata: # kpt-merge: istio-system/knative-local-gateway
  name: knative-local-gateway
  namespace: istio-system
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|istio-system|knative-local-gateway'
spec:
  selector:
    app: cluster-local-gateway
    istio: cluster-local-gateway
